--- a/style.css
+++ b/style.css
@@ -784,7 +784,7 @@ input[type=radio] {
     width: 496px;
   }
 
-  .pc-global-menu > ul {
+  .pc-global-menu #menu-global-menu {
     display: flex;
     font-weight: bold;
     height: 70px;
@@ -792,7 +792,7 @@ input[type=radio] {
     line-height: 3;
   }
 
-  .pc-global-menu > li {
+  .pc-global-menu > #menu-global-menu {
     margin: 0 20px;
   }
 
