商品詳細ページのお気に入り箇所の変更とハートの位置調整

--- a/style.css
+++ b/style.css
@@ -609,16 +609,22 @@ input[type=radio] {
 
 .detail-favorite {
   margin-top: 10px;
+  position: relative;
 }
 
 .add-favorite {
   display: none;
 }
+
 .favorite-active .none-favorite {
   display: none;
 }
+
 .favorite-active .add-favorite {
   display: block;
+  position: absolute;
+  top: 0;
+
 }
 
 .detail-summary {
