--- a/mytheme/style.css
+++ b/mytheme/style.css
@@ -21,6 +21,7 @@ body {
 /*  記事　*/
 article {
 	margin-bottom: 40px;
+	overflow: hidden;
 }
 
 article h1 {
@@ -67,19 +68,14 @@ article h1 a {
 	float: left;
 }
 
-.pagenav .old::after {
-	content: '';
-	display: block;
-	clear: both;
-}
 .pagenav .new a {
 	float: right;
 }
 
-.pavenav {
+.pagenav {
 	overflow: hidden;
-	margin-top: 40px;
-	margin-bottom: 40px;
+	margin: 40px 0;
+	clear: both;
 }
 
 /* ヘッダー */
@@ -118,4 +114,36 @@ footer {
 	color: #fff;
 	margin-bottom: 40px;
 	padding: 14px 0;
+}
+
+/* 本文中の画像 */
+article img {
+	border: none;
+	max-width: 100%;
+	height: auto;
+}
+.aligncenter {
+	display: block;
+	margin: 30px auto;
+}
+
+.alignright {
+	float: right;
+	margin: 0 0 30px 30px;
+}
+
+.alighleft {
+	float: left;
+	margin: 0 30px 30px 0;
+}
+
+.wp-caption {
+	max-width: 100%;
+}
+
+.wp-caption-text {
+	color: #666;
+	font-size: 14px;
+	margin: 0;
+	text-align: center;
 }
