--- a/mytheme/style.css
+++ b/mytheme/style.css
@@ -8,7 +8,7 @@ Version: 1.0
 */
 
 body {
-	font-family: 'メイリオ', 'Hiragino Kaku Gothic Pro', sans-serif;
+	font-family: "メイリオ", "Hiragino Kaku Gothic Pro", sans-serif;
 	margin: 0;
 }
 
@@ -106,7 +106,7 @@ header a {
 
 .siteinfo h1 {
 	float: left;
-	font-family: 'Acme', sans-serif;
+	font-family: "Acme", sans-serif;
 	font-size: 20px;
 	margin: 0;
 }
